# taskbridge

./: .gitignore  .pre-commit-config.yaml  Makefile  PROVIDER_SCHEMA.md  SHELL_FUNCTIONS.md  TOGGL_FIX_SUMMARY.md  TOGGL_HOOK_INSTALL.md  TOGGL_OPTIMIZATION.md  TOGGL_TROUBLESHOOTING.md  justfile  on-modify.toggl  pyproject.toml  taskbridge_prd_state.md  tw-obsidian-note.py  tw-raycast-focus.py
.zed/: settings.json
backlog/: config.yml
backlog/archive/tasks/: task-07 - Implement-complete-CLI-interface.md
backlog/decisions/: 001-local-first-time-tracking-with-zeit.md
backlog/tasks/: task-01 - Set-up-Python-package-structure.md  task-02 - Implement-configuration-management-system.md  task-03 - Design-and-implement-database-schema.md  task-04 - Implement-Linear-API-client.md  task-04 - Implement-Todoist-API-client.md  task-05 - Implement-Toggl-API-client.md  task-06 - Implement-project-synchronization-engine.md  task-07 - Implement-complete-CLI-interface.md  task-08 - Create-Raycast-script-commands.md  task-09 - Complete-testing-and-documentation.md  task-10 - Implement-Obsidian-vault-configuration.md  task-11 - Create-task-note-generation-system.md  task-12 - Add-Obsidian-CLI-commands.md  task-13 - Implement-project-completion-and-archiving-functionality.md  task-14 - Add-Taskwarrior-sync-functionality.md  task-15 - Add-on-modify-toggl-script-for-taskwarrior-integration.md  task-16 - Improve-installation-with-pixi-global-support.md  task-17 - Add-Google-Calendar-to-taskwarrior-sync-integration.md  task-18 - Add-Todoist-to-Obsidian-note-sync-integration.md  task-19 - Evaluate-local-first-time-tracking-solutions.md  task-20 - Make-it-a-TUI.md  task-21 - Implement-zeit-time-tracking-integration-with-auto-tracking.md  task-22 - Design-and-implement-meeting-time-tracking-workflow.md  task-23 - Create-daily-report-for-email.md  task-24 - Sync-JIRA-issues-assigned-to-user-into-Todoist.md  task-25 - Build-web-UI-for-bartib-time-log.md  task-26 - Add-support-to-migrate-tasks-to-a-todo.txt-format.md  task-27 - Add-standing-task-support.md  task-28 - Add-♾️-standing-task-support-to-web-UI.md  task-29 - Enhance-time-report-with-week-shortcut-and-label-breakdown.md
src/taskbridge/: __init__.py  bartib_integration.py  cli.py  config.py  database.py  gcal_integration.py  google_calendar_provider.py  jira_api.py  linear_api.py  main.py  sync.py  taskwarrior_api.py  taskwarrior_provider.py  todoist_api.py  toggl_api.py  web_ui.py  zeit_integration.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  conftest.py  test_bartib_integration.py  test_fill.py  test_jira_api.py  test_meetings.py  test_report.py  test_time_tracking.py  test_todo_txt.py  test_todoist_api.py  test_zeit_integration.py
